// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PdfViewer renders properly only with pdf value, without checkbox 1`] = `
<div
  className=""
>
  <div
    className="theme-portal"
  >
    <div
      className="pdfContainer "
      style={Object {}}
    >
      <object
        className="objectContainer"
        data="https://archive.org/download/starrover00lond/starrover00lond.pdf#view=FitH"
        type="application/pdf"
      >
        <embed
          src="https://archive.org/download/starrover00lond/starrover00lond.pdf#view=FitH"
          type="application/pdf"
        />
      </object>
    </div>
  </div>
</div>
`;

exports[`PdfViewer renders properly with all props used 1`] = `
<div
  className=""
>
  <div
    className="theme-portal"
  >
    <div
      className="pdfContainer "
      style={
        Object {
          "height": "300px",
        }
      }
    >
      <object
        className="objectContainer"
        data="https://archive.org/download/starrover00lond/starrover00lond.pdf#view=FitH"
        type="application/pdf"
      >
        <embed
          src="https://archive.org/download/starrover00lond/starrover00lond.pdf#view=FitH"
          type="application/pdf"
        />
      </object>
    </div>
    <div
      className="theme-purple wrapper"
    >
      <div
        className=" customCheckbox customCheckboxDefault"
        onClick={[Function]}
      >
        <input
          name="checkbox"
          type="hidden"
          value="no"
        />
        <input
          checked={false}
          className="false"
          name="checkbox"
          readOnly={true}
          type="checkbox"
          value="yes"
        />
        <label>
          Testing my checkbox
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`PdfViewer renders properly with pdf, and checkbox 1`] = `
<div
  className=""
>
  <div
    className="theme-portal"
  >
    <div
      className="pdfContainer "
      style={Object {}}
    >
      <object
        className="objectContainer"
        data="https://archive.org/download/starrover00lond/starrover00lond.pdf#view=FitH"
        type="application/pdf"
      >
        <embed
          src="https://archive.org/download/starrover00lond/starrover00lond.pdf#view=FitH"
          type="application/pdf"
        />
      </object>
    </div>
    <div
      className="theme-purple wrapper"
    >
      <div
        className=" customCheckbox customCheckboxDefault"
        onClick={[Function]}
      >
        <input
          name="checkbox"
          type="hidden"
          value="no"
        />
        <input
          checked={false}
          className="false"
          name="checkbox"
          readOnly={true}
          type="checkbox"
          value="yes"
        />
        <label>
          Testing my checkbox
        </label>
      </div>
    </div>
  </div>
</div>
`;
